# flowcred.it

avaliadores_crew/: .env.example  API_README.md  README.md  avaliadores_crew.db  pyproject.toml  report.json
avaliadores_crew/db/: chroma.sqlite3
avaliadores_crew/documentos/: 20250518_222056_contrato.txt
avaliadores_crew/src/avaliadores_crew/: crew.py  main.py
avaliadores_crew/src/avaliadores_crew/api/: __init__.py  celery_app.py  config.py  database.py  main.py  tasks.py  worker.py
avaliadores_crew/src/avaliadores_crew/api/models/: __init__.py  api_models.py  db_models.py
avaliadores_crew/src/avaliadores_crew/api/routers/: __init__.py  documents.py
avaliadores_crew/src/avaliadores_crew/api/services/: __init__.py  document_analysis.py  mock_analysis.py
avaliadores_crew/src/avaliadores_crew/config/: agents.yaml  tasks.yaml
avaliadores_crew/src/avaliadores_crew/models/: __init__.py  analysis_output.py  document_output.py  financial_output.py
docs/: application-reference.md  autenticacao-registro-fluxo.md  implementacao-autenticacao.md  teste-anvil.md  web3-data.txt
frontend-flowcred/: .eslintignore  .eslintrc.json  eslint.config.mjs  package-lock.json  package.json
frontend-flowcred/src/app/: globals.css  layout.tsx  page.tsx
frontend-flowcred/src/components/: cta-section.tsx  features-section.tsx  footer.tsx  hero-section.tsx  navbar.tsx  register-button.tsx  user-profiles-section.tsx
frontend-flowcred/src/hooks/: useWallet.ts
frontend-flowcred/utils/: config.ts
web3/: .env.example
web3/script/: DeployFlowCred.s.sol  test-flow.sh
web3/test/: FlowCredIdentity.t.sol  FlowCredVCRegistry.t.sol
(+69 files in other folders)
