[project]
name = "avaliadores_crew"
version = "0.1.0"
description = "avaliadores-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
avaliadores_crew = "avaliadores_crew.main:run"
run_crew = "avaliadores_crew.main:run"
train = "avaliadores_crew.main:train"
replay = "avaliadores_crew.main:replay"
test = "avaliadores_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
